Finished bubble chart for top authors in a conference

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,6 +3,9 @@
 #aws.db.username=msddblp
 #aws.db.password=zxcv1234
 
+#username: msprojectdblp
+#password: msprojectdblp
+
 
 #### Local Creds #######
 aws.db.connection.url=jdbc:mysql://127.0.0.1:3306/new_dblp
