Changes before demo

--- a/pom.xml
+++ b/pom.xml
@@ -62,35 +62,11 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>run</goal>
+							<goal>repackage</goal>
 						</goals>
 					</execution>
 				</executions>
 			</plugin>
 		</plugins>
 	</build>
-
-	<!--<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>1.5.4.RELEASE</version>
-				<configuration>
-					<mainClass>edu.neu.msproject.PulicationGeneology.PulicationGeneologyApplication</mainClass>
-					<addResources>true</addResources>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>-->
-
-
 </project>
