--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,13 +1,12 @@
 #### AWS Creds #####
-#aws.db.connection.url=jdbc:mysql://dblp.c1lyqqia3dks.us-east-1.rds.amazonaws.com:3306/dblp_new
-#aws.db.username=msddblp
-#aws.db.password=zxcv1234
+aws.db.connection.url=jdbc:mysql://publicationgeneologydbserver.cgxqsiv56xdn.us-east-1.rds.amazonaws.com:3306/dblp
+aws.db.username=msprojectdblp
+aws.db.password=msprojectdblp
 
 #username: msprojectdblp
 #password: msprojectdblp
 
-
 #### Local Creds #######
-aws.db.connection.url=jdbc:mysql://127.0.0.1:3306/new_dblp
-aws.db.username=root
-aws.db.password=PaulMahi07
+#aws.db.connection.url=jdbc:mysql://127.0.0.1:3306/new_dblp
+#aws.db.username=root
+#aws.db.password=PaulMahi07
